--- a/src/main/webapp/css/styles.css
+++ b/src/main/webapp/css/styles.css
@@ -652,3 +652,246 @@ ul li:hover ul li {
 }	
 /*Requests box end */
 
+/*Creating Requests box*/
+
+.userCreateRequestBox {
+	position: absolute;
+	top: 50%;
+	Left: 50%;
+	transform: translate(-50%, -50%);
+	width: 600px;
+	padding: 10px;
+	background: rgba(0, 0, 0, .8);
+	box-sizing: border-box;
+	box-shadow: 0 15px 25px rgba(0, 0, 0, .5);
+	border-radius: 4px;
+}
+
+.userCreateRequestBox h3 {
+	text-align: center;
+}
+
+.userCreateRequestBox button{
+	float: left;
+	text-decoration: none;
+	display: block;
+	text-align: center;
+	padding: 10px 30px;
+	font-size: 18px;
+	background: rgba(0, 0, 0, .1);
+	color: white;
+	border-radius: 4px;
+	border: none;
+}
+
+.userCreateRequestBox button:hover {
+	background-color: #ddd;
+	color: black;
+	border-radius: 5px;
+}
+
+/*Creating Requests box END */
+
+
+/*Open form for NewAccount Request */
+
+.newAccountRequestForm {
+  display: none;
+  position: fixed;
+  bottom: 0;
+  right: 15px;
+  border: 3px solid #f1f1f1;
+  z-index: 9;  
+  position: absolute;
+  top: 50%;
+  Left: 50%;
+  transform: translate(-50%, -50%);
+  width: 490px;
+  height:480px;  
+  background-color: white;
+  color:black;
+}
+
+.newAccountRequestForm .form-container {  
+  max-width: 470px;
+  padding: 10px;
+  background-color: white;  
+}
+
+.newAccountRequestForm .form-container .btn {
+  background-color: #1976D2;
+  color: white;
+  padding: 16px 20px;
+  border: none;
+  cursor: pointer;
+  width: 100%;
+  margin-bottom:10px;
+  opacity: 0.8;
+  font-size: 15px;
+  font-weight: bold;
+}
+
+.newAccountRequestForm .form-container .cancel {
+  background-color: #448AFF;
+}
+
+.newAccountRequestForm .form-container .btn:hover {
+  opacity: 1;
+}
+/*Open form for NewAccount Request  END*/
+
+
+/*Open form for newCardExistingAccount Request */
+.newCardExistingAccountRequestForm {
+  display: none;
+  position: fixed;
+  bottom: 0;
+  right: 15px;
+  border: 3px solid #f1f1f1;
+  z-index: 9;  
+  position: absolute;
+  top: 50%;
+  Left: 50%;
+  transform: translate(-50%, -50%);
+  width: 470px;
+  height:480px;  
+  background-color: white;
+  color:black;
+}
+
+.newCardExistingAccountRequestForm .form-container {  
+  max-width: 470px;
+  padding: 10px;
+  background-color: white;  
+}
+
+.newCardExistingAccountRequestForm .form-container .btn {
+  background-color: #1976D2;
+  color: white;
+  padding: 16px 20px;
+  border: none;
+  cursor: pointer;
+  width: 100%;
+  margin-bottom:10px;
+  opacity: 0.8;
+  font-size: 15px;
+  font-weight: bold;
+}
+
+.newCardExistingAccountRequestForm .form-container .cancel {
+  background-color: #448AFF;
+}
+
+.newCardExistingAccountRequestForm .form-container .btn:hover {
+  opacity: 1;
+}
+/*Open form for newCardExistingAccount Request END*/
+
+/*Open form for newCard Request */
+.newCardRequestForm {
+  display: none;
+  position: fixed;
+  bottom: 0;
+  right: 15px;
+  border: 3px solid #f1f1f1;
+  z-index: 9;  
+  position: absolute;
+  top: 50%;
+  Left: 50%;
+  transform: translate(-50%, -50%);
+  width: 470px;
+  height:450px;  
+  background-color: white;
+  color:black;
+}
+
+.newCardRequestForm .form-container {  
+  max-width: 470px;
+  padding: 10px;
+  background-color: white;  
+}
+
+.newCardRequestForm .form-container .btn {
+  background-color: #1976D2;
+  color: white;
+  padding: 16px 20px;
+  border: none;
+  cursor: pointer;
+  width: 100%;
+  margin-bottom:10px;
+  opacity: 0.8;
+  font-size: 15px;
+  font-weight: bold;
+}
+
+.newCardRequestForm .form-container .cancel {
+  background-color: #448AFF;
+}
+
+.newCardRequestForm .form-container .btn:hover {
+  opacity: 1;
+}
+/*Open form for newCard Request END*/
+
+.newCardRequestForm select, .newCardExistingAccountRequestForm select { 
+  font-size: 120%;
+}
+
+/* Custom radio button START*/
+.container {
+  display: block;
+  position: relative;
+  padding-left: 35px;
+  margin-bottom: 12px;
+  cursor: pointer;
+  font-size: 22px;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+.container input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+}
+
+.checkmark {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 25px;
+  width: 25px;
+  background-color: #eee;
+  border-radius: 50%;
+}
+
+.container:hover input ~ .checkmark {
+  background-color: #ccc;
+}
+
+.container input:checked ~ .checkmark {
+  background-color: #2196F3;
+}
+
+.checkmark:after {
+  content: "";
+  position: absolute;
+  display: none;
+}
+
+.container input:checked ~ .checkmark:after {
+  display: block;
+}
+
+.container .checkmark:after {
+ 	top: 9px;
+	left: 9px;
+	width: 8px;
+	height: 8px;
+	border-radius: 50%;
+	background: white;
+}
+/* Custom radio button END */
+
